# ColumnarDB

./: .gitignore  CMakeLists.txt  main.cpp  test_roundtrip.py
src/csv/: csvreader.cpp  csvreader.h  csvwriter.cpp  csvwriter.h
src/engine/batch/: batch.cpp  batch.h
src/engine/columnar/: columnar_format.h  columnar_reader.cpp  columnar_reader.h  columnar_writer.cpp  columnar_writer.h
src/schema/: schema.cpp  schema.h
src/utils/: utils.h
tests/: CMakeLists.txt  test_csv.cpp  test_roundtrip.cpp
